# CeviCamp

./: .gitignore  CMakeLists.txt  README.md  cevicamp_log.txt  make.bat  make.sh  project.rc  release.bat  release.sh  version
.github/workflows/: build_on_push.yml
doc/: index.html
docs/: index.html  stylesheet.css
res/CampParts/: README.md
res/Sounds/: LICENSE
src/: GameController.hpp  GameObjectManager.hpp  Logger.hpp  Settings.hpp  SoundManager.hpp  View.hpp  main.cpp
src/GameObjects/: AnimatedSprite.hpp  Animation.hpp  Blache.hpp  Child.hpp  ChildrenNames.hpp  ClickableMenu.hpp  ClickableMessageBox.hpp  Fire.hpp  GameObject.hpp  Grass.hpp  Inventory.hpp  InventoryItem.hpp  InventorySlot.hpp  MessageBox.hpp  MouseCursor.hpp  Paloxe.hpp  Player.hpp  PlayerInventory.hpp  Sarasani.hpp  Stone.hpp  Trash.hpp  Tree.hpp
src/Screens/: MainMenu.hpp  Options.hpp  Screen.hpp  SplashScreen.hpp
